# raxion

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  AGENTS.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  LICENSE  LICENSE.md  MEMORY.md  Makefile  README.md  RUNBOOK.md  SECURITY.md  WHITEPAPER-MICRO.md  WHITEPAPER.md  WHITEPAPER.ptbr.md  WHITEPAPER.zh.md  YELLOWPAPER.md  package.json  sonar-project.properties
.github/ISSUE_TEMPLATE/: m1-infra-explorer.md  m1-infra-indexer.md  m1-infra-observability.md  m1-infra-rpc.md
.github/issues/: coherence-rust.md  mmlu-benchmark.md  neurosymbolic-stub.md  risc-zero-benchmark.md
.github/workflows/: ci.yml  python-tests.yml  q2-validate.yml  sonarcloud.yml
.serena/: project.yml
api/: package.json  server.ts
apps/: README.md
apps/explorer/: .env.example  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/explorer/app/: globals.css  layout.tsx  page.tsx
apps/explorer/app/api/inference/: route.ts
apps/explorer/lib/: events.ts  poiq.ts
apps/site/: index.html  package.json  proxy.ts  tsconfig.json  wrangler.jsonc
apps/site/app/: globals.css  layout.tsx  page.tsx  route.ts  site-effects.tsx  sitemap.ts
apps/site/app/announcements/: page.tsx
apps/site/app/announcements/[slug]/: page.tsx
apps/site/app/blog/: page.tsx
apps/site/app/blog/[slug]/: page.tsx
apps/site/app/components/: home-page.tsx  home-sections.tsx  locale-switcher.tsx  post-index.tsx  post-pages.tsx  site-shell.tsx
apps/site/app/content/: posts.data.json  posts.ts  site-dictionary.data.json  site-dictionary.ts  site-types.ts
apps/site/app/es/: page.tsx
apps/site/app/es/announcements/: page.tsx
apps/site/app/es/announcements/[slug]/: page.tsx
apps/site/app/es/blog/: page.tsx
apps/site/app/es/blog/[slug]/: page.tsx
apps/site/app/ja/: page.tsx
apps/site/app/ja/announcements/: page.tsx
apps/site/app/ja/announcements/[slug]/: page.tsx
apps/site/app/ja/blog/: page.tsx
apps/site/app/ja/blog/[slug]/: page.tsx
apps/site/app/pt-BR/: page.tsx
apps/site/app/pt-BR/announcements/: page.tsx
apps/site/app/pt-BR/announcements/[slug]/: page.tsx
apps/site/app/pt-BR/blog/: page.tsx
apps/site/app/pt-BR/blog/[slug]/: page.tsx
apps/site/app/zh/: page.tsx
apps/site/app/zh/announcements/: page.tsx
apps/site/app/zh/announcements/[slug]/: page.tsx
apps/site/app/zh/blog/: page.tsx
apps/site/app/zh/blog/[slug]/: page.tsx
apps/site/lib/: site.ts
apps/site/public/: robots.txt  site.webmanifest
config/deploy/: devnet.env.example
docker/anchor-devnet/: Dockerfile  README.md
docs/: AGENT_MARKETPLACE_SPEC.md  AUDIT_PACKAGE.md  AUDIT_PREP.md  MAINNET_READINESS.md  PITCH.md  REPO_MAP.md  RUNBOOK.md  SMART_AGENT_PLAYBOOK.md
docs/benchmarks/: mmlu-convergence-q1-2026.md  risc0-latency-q1-2026.md
docs/plans/: q2-devnet-plan-v1.1.md  q4-testnet-launch-plan-v0.1.md  testnet-90-day-stability-plan.md
docs/reports/: q2-devnet-status-2026-02-25.md  q3-testnet-readiness-2026-02-27.md  slash-event-documentation.md
docs/runbooks/: devnet-runbook.md  q3-testnet-readiness-runbook.md  testnet-stability-plan.md
examples/agents/: math_agent.rax
explorer/: package-lock.json  package.json
explorer/app/: globals.css  layout.tsx
ops/: README.md
ops/config/deploy/: devnet.env.example
ops/docker/anchor-devnet/: Dockerfile  README.md
patches/agave/: README.md
poc/: __init__.py  requirements-dev.txt  requirements.txt  run_poc.py  validate_q1.py
poc/architectures/: __init__.py  base.py  neurosymbolic.py  openrouter.py  ssm_proxy.py  transformer.py
poc/benchmarks/: dataset.py  mmlu_100_mock_seed42.json  results_q1.json
poc/benchmarks/devnet_results/: stress_test_20260227_002636.json
poc/benchmarks/results/: mmlu_100_q2_baseline.json
poc/convergence/: __init__.py  coherence.py  embeddings.py
poc/tests/: test_architectures.py  test_coherence.py
programs/raxion-poiq/: Cargo.toml
programs/raxion-poiq/examples/: network_loadgen.rs
programs/raxion-poiq/src/: challenge.rs  dissent.rs  lib.rs
programs/raxion-rollup/: Cargo.toml
programs/raxion-rollup/src/: lib.rs
programs/raxion-token/: Cargo.toml
programs/raxion-token/src/: lib.rs  vesting.rs
proofs/: Cargo.toml  bench_risc0_latency.py
proofs/benchmarks/: risc0_latency_results.json
proofs/jolt-circuits/: Cargo.toml
proofs/jolt-circuits/src/: lib.rs
proofs/risc0-guest/: Cargo.toml
proofs/risc0-guest/src/: main.rs
proofs/risc0-host/: Cargo.toml
proofs/risc0-host/risc0-guest/: Cargo.toml
proofs/risc0-host/src/: main.rs
proofs/risc0-types/: Cargo.toml
proofs/risc0-types/src/: coherence.rs  lib.rs
proofs/risc0-types/tests/: coherence.rs
proofs/risc0-types/tests/fixtures/: coherence_python_fixtures.json
runtime/: README.md
runtime/cognitive/: Cargo.toml
runtime/cognitive/src/: account_types.rs  convergence.rs  lib.rs  memory.rs  scheduler.rs  state_root.rs
scripts/: apply_rust_toolchain_patches.sh  benchmark_proof_latency.sh  cross_validate_coherence.py  deploy_health_check.sh  deploy_poiq_devnet.sh  deploy_rollup.sh  devnet_seed.mjs  devnet_stress_test.py  devnet_test_suite.js  docker_anchor_shell.sh  docker_bootstrap_solana_devnet.sh  docker_deploy_poiq_devnet.sh  fetch_agave.sh  gpu_benchmark.js  multi_agent_sim.js  pre_audit_check.sh  quick_sim.js  run_network_loadgen.sh  solana_airdrop.sh  submit_inference.js  trigger_slash_test.py  validate_q2.py  validate_q2.sh  validate_q3.py
sdk/agent/: Cargo.toml  README.md
sdk/agent/examples/: api_agent.rs  code_agent.rs  math_agent.rs  text_agent.rs
sdk/agent/src/: agent.rs  inference.rs  lib.rs  memory.rs  runner.rs
sdk/raxlang/: Cargo.toml
sdk/raxlang/src/: ast.rs  lib.rs  main.rs  parser.rs  transpiler.rs
site/: index.html
