[workspace]
members = [
    "risc0-host",
    "risc0-guest",
    "risc0-types",
]
resolver = "2"

[workspace.dependencies]
risc0-zkvm = { version = "1.0", default-features = false, features = ["std"] }
risc0-build = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", branch = "risczero", package = "sha2" }
