[package]
name = "raxion-poiq"
version = "0.1.0"
edition = "2021"
description = "RAXION PoIQ Anchor program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"

[patch.crates-io]
anchor-syn = { path = "../../third_party/anchor-syn-0.30.1" }
constant_time_eq = { path = "../../third_party/constant_time_eq-0.4.2" }
