[package]
name = "raxion-poiq"
version = "0.1.0"
edition = "2021"
description = "RAXION PoIQ Anchor program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30"
sha2 = "0.10"

[dev-dependencies]
anchor-client = "0.30.1"
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
