[workspace]

[package]
name = "raxion-poiq"
version = "0.1.0"
edition = "2021"
description = "RAXION PoIQ Anchor program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.1"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8.6"
