[package]
name = "raxion-rollup"
version = "0.1.0"
edition = "2021"
description = "RAXION sovereign rollup state root commitment program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30"
