[package]
name = "raxion-token"
version = "0.1.0"
edition = "2021"
description = "RAXION tokenomics program (testnet scaffolding)"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.1"
anchor-spl = "1.1"
