[package]
name = "risc0-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0", features = ["std"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
risc0-build = "1.0"

[package.metadata.risc0]
methods = ["risc0-guest"]
