[package]
name = "risc0-host"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda-backend = ["risc0-zkvm/cuda"]

[dependencies]
risc0-zkvm = { version = "1.0", features = ["prove", "std"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
risc0-types = { path = "../risc0-types" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
risc0-build = "1.0"

[package.metadata.risc0]
methods = ["risc0-guest"]
