[package]
name = "raxion-sdk"
version = "0.1.0"
edition = "2021"
description = "RAXION Smart Agent SDK"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }

[dev-dependencies]
env_logger = "0.11"
