[package]
name = "risc0-host-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raxion-inference-proof"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
sha2 = { version = "0.10", default-features = false }

[workspace]
